Synthesizer page first version

--- a/1.html
+++ b/1.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - HTML</title>
+  <title>Analog Synthesizer</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">Synthesizer</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Analog Synthesizer</a></li>
+    <li><a href="2.html">Digital Synthesizer</a></li>
+    <li><a href="3.html">Software Synthesizer</a></li>
   </ol>
-  <h2>HTML</h2>
-  <p><a href="https://www.w3.org/TR/2011/WD-html5-20110405/" target="_blank" title="html5 specifiation">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong>  and web applications.Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-  <img src="coding.jpg" width=100%>
-  <p><p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. </p>
+  <h2>Analog Synthesizer</h2>
+  <p>An analog (or analogue) synthesizer is a synthesizer that uses analog circuits and analog signals to generate sound electronically.</p>
+  <p>The earliest analog synthesizers in the 1920s and 1930s, such as the Trautonium, were built with a variety of vacuum-tube (thermionic valve) and electro-mechanical technologies. After the 1960s, analog synthesizers were built using operational amplifier (op-amp) integrated circuits, and used potentiometers (pots, or variable resistors) to adjust the sound parameters. Analog synthesizers also use low-pass filters and high-pass filters to modify the sound. While 1960s-era analog synthesizers such as the Moog used a number of independent electronic modules connected by patch cables, later analog synthesizers such as the Minimoog integrated them into single units, eliminating patch cords in favour of integrated signal routing systems.</p>
+  <img src="Prophet5.jpeg" width="100%">
 </body>
 </html>
