--- a/2.html
+++ b/2.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - CSS</title>
+  <title>Digital Synthesizer</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">Synthesizer</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Analog Synthesizer</a></li>
+    <li><a href="2.html">Digital Synthesizer</a></li>
+    <li><a href="3.html">Software Synthesizer</a></li>
   </ol>
-  <h2>CSS</h2>
-  <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
-  </body>
+  <h2>Digital Synthesizer</h2>
+  <p>A digital synthesizer is a synthesizer that uses digital signal processing (DSP) techniques to make musical sounds. This in contrast to older analog synthesizers, which produce music using analoge electronics, and samplers, which play back digital recordings of acoustic, electric, or electronic instruments. Some digital synthesizers emulate analog synthesizers; others include sampling capability in addition to digital synthesis.</p>
+  <img src="DX7.jpg" width="100%">
+</body>
 </html>
