--- a/3.html
+++ b/3.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1 - JavaScript</title>
+  <title>Software Synthesizer</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">Synthesizer</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Analog Synthesizer</a></li>
+    <li><a href="2.html">Digital Synthesizer</a></li>
+    <li><a href="3.html">Software Synthesizer</a></li>
   </ol>
-  <h2>JavaScript</h2>
-  <p>JavaScript (/ˈdʒɑːvəˌskrɪpt/),[10] often abbreviated JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites use JavaScript on the client side for web page behavior,[12] often incorporating third-party libraries.[13] All major web browsers have a dedicated JavaScript engine to execute the code on users' devices.
-  </p>
+  <h2>Analog Synthesizer</h2>
+  <p>A software synthesizer or softsynth is a computer program that generates digital audio, usually for music. Computer software that can create sounds or music is not new, but advances in processing speed now allow softsynths to accomplish the same tasks that previously required the dedicated hardware of a conventional synthesizer. Softsynths may be readily interfaced with other music software such as music sequencers typically in the context of a digital audio workstation. Softsynths are usually less expensive and can be more portable than dedicated hardware.</p>
+  <img src="Serum.gif" width="100%"> 
 </body>
 </html>
